@@ -2,6 +2,7 @@
 - Support for bezier curve logic in Beam Drawable. Adds left and right tangents.
 - Sprite animations are now supported with FlipBook module
 - Camera pos and zoom are now saving and loading in/from .tls file metadata
+- Added fake motion blur module that calculates particle size based on how fast it moves
 
 [1.0.5]
 - legacy libGDX particle file importer full functionality
